# gov-clock

./: CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.old  Makefile  Makefile.xml.in  TODO.md  gov-refactor.sh  gov-refactor.sh.ol  gov-std.txt  obinexus_dop_c_implementation.c  refactor.sh  refactor_corrected.sh  test_manifest.xml
examples/: time_components_manifest.xml
include/: dop_adapter.h  dop_manifest.h  dop_topology.h  nexus_link_semserver_x.h  obinexus_dop_core.h  taxonomy_testing.h
makes/: Makefile  Makefile.old  Makefile.xml.in.old
schemas/: dop_manifest.xsd
scripts/: generate_manifest.cmake  validate_source_to_build.cmake
src/: dop_adapter.c  dop_manifest.c.old  dop_topology.c  dop_topology.c.old  obinexus_dop_core.c  obinexus_dop_core.h  taxonomy_testing.c
src/components/: alarm.c  clock.c  stopwatch.c  timer.c
src/demo/: dop_demo.c
tests/: test_components.c
